--- a/docs/sphinx/source/whatsnew/v0.7.0.rst
+++ b/docs/sphinx/source/whatsnew/v0.7.0.rst
@@ -1,7 +1,7 @@
 ﻿.. _whatsnew_0700:
 
-v0.7.0 (MONTH DAY, YEAR)
-------------------------
+v0.7.0 (December 18, 2019)
+--------------------------
 
 This is a major release that drops support for Python 2 and Python 3.4. We
 recommend all users of v0.6.3 upgrade to this release after checking API
@@ -198,7 +198,7 @@ Removal of prior version deprecations
 * Removed `ModelChain.singlediode` method.
 * Removed `ModelChain.prepare_inputs` clearsky assumption when no irradiance
   data was provided.
-  
+
 Requirements
 ~~~~~~~~~~~~
 * numpy minimum increased to v1.12.0, released in 2017. (:issue:`830`)
@@ -220,3 +220,12 @@ Contributors
 * Todd Karin (:ghuser:`toddkarin`)
 * Mark Mikofski (:ghuser:`mikofski`)
 * Kevin Anderson (:ghuser:`kevinsa5`)
+* Cameron Stark (:ghuser:`camerontstark`)
+* Janine Freeman (:ghuser:`janinefreeman`)
+* Roel Loonen (:ghuser:`roelloonen`)
+* Birgit Schachler (:ghuser:`birgits`)
+* Hamilton Kibbe (:ghuser:`hamiltonkibbe`)
+* Adam Peretti (:ghuser:`aperetti`)
+* Cedric Leroy (:ghuser:`cedricleroy`)
+* Joseph Palakapilly (:ghuser:`JPalakapillyKWH`)
+* (:ghuser:`shall-resurety`)
