--- a/docs/sphinx/source/whatsnew/v0.7.1.rst
+++ b/docs/sphinx/source/whatsnew/v0.7.1.rst
@@ -15,7 +15,7 @@ Enhancements
 * Added `leap_day` parameter to `iotools.get_psm3` instead of hardcoding it as
   False.
 * Added :py:func:`~pvlib.iotools.get_pvgis_tmy` to get PVGIS TMY datasets.
-* Added :py:func:`~pvlib.iotools.parse_epw` to parse a file-like buffer.
+* Added :py:func:`~pvlib.iotools.parse_epw` to parse a file-like buffer
   containing weather data in the EPW format.
 
 Bug fixes
@@ -34,3 +34,4 @@ Documentation
 Contributors
 ~~~~~~~~~~~~
 * Kevin Anderson (:ghuser:`kanderso-nrel`)
+* Mark Mikofski (:ghuser:`mikofski`)
