--- a/docs/sphinx/source/whatsnew/v0.7.1.rst
+++ b/docs/sphinx/source/whatsnew/v0.7.1.rst
@@ -20,6 +20,8 @@ Enhancements
 
 Bug fixes
 ~~~~~~~~~
+* Fix error in logic for emitting deprecation warning in
+  :py:func:`~pvlib.pvsystem.sapm` (:pull:`844`)
 * Changed the PSM3 API endpoint for TMY requests in `iotools.get_psm3`.
 
 Testing
@@ -36,3 +38,7 @@ Contributors
 ~~~~~~~~~~~~
 * Kevin Anderson (:ghuser:`kanderso-nrel`)
 * Mark Mikofski (:ghuser:`mikofski`)
+* :ghuser:`dzimmanck`
+* Will Holmgren (:ghuser:`wholmgren`)
+* Mark Mikofski (:ghuser:`mikofski`)
+* Cliff Hansen (:ghuser:`cwhanse`)
