update whatsnew date

--- a/docs/sphinx/source/whatsnew/v0.7.1.rst
+++ b/docs/sphinx/source/whatsnew/v0.7.1.rst
@@ -1,11 +1,7 @@
 .. _whatsnew_0710:
 
-v0.7.1 (MONTH DAY, YEAR)
-------------------------
-
-
-API Changes
-~~~~~~~~~~~
+v0.7.1 (January 10, 2020)
+-------------------------
 
 Enhancements
 ~~~~~~~~~~~~
