--- a/docs/sphinx/source/whatsnew/v0.7.1.rst
+++ b/docs/sphinx/source/whatsnew/v0.7.1.rst
@@ -26,7 +26,7 @@ Testing
 ~~~~~~~
 * Added single-year PSM3 API test for `iotools.get_psm3`.
 * Added tests for `iotools.parse_psm3` and `iotools.read_psm3`.
-* Change test folder to `tests` and reorganize tests into subfolders, _eg_
+* Change `pvlib/test` folder to `pvlib/tests` and reorganize tests into subfolders, _eg_
   created `tests/iotools` (:pull:`859`)
 
 Documentation
