use pathlib, remove os, inspect
* some iotools expect string to check for url using startswith() - so
  stringify path objects first
* in midc, use requests.get params arg to build querystring instead of
  doing it manually
* a couple of places chnage constants to all CAPS, some other places
  make a fixture, sometimes nothing, not consistent
* also in test_midc, comment out unused URL, was it part of a test once?

--- a/docs/sphinx/source/whatsnew/v0.7.1.rst
+++ b/docs/sphinx/source/whatsnew/v0.7.1.rst
@@ -26,8 +26,8 @@ Testing
 ~~~~~~~
 * Added single-year PSM3 API test for `iotools.get_psm3`.
 * Added tests for `iotools.parse_psm3` and `iotools.read_psm3`.
-* Change `pvlib/test` folder to `pvlib/tests` and reorganize tests into subfolders, _eg_
-  created `tests/iotools` (:pull:`859`)
+* Change `pvlib/test` folder to `pvlib/tests` and reorganize tests into
+  subfolders, _eg_ created `pvlib/tests/iotools` (:pull:`859`)
 
 Documentation
 ~~~~~~~~~~~~~
