fix typo, mention pathlib in what's new

--- a/docs/sphinx/source/whatsnew/v0.7.1.rst
+++ b/docs/sphinx/source/whatsnew/v0.7.1.rst
@@ -27,7 +27,8 @@ Testing
 * Added single-year PSM3 API test for `iotools.get_psm3`.
 * Added tests for `iotools.parse_psm3` and `iotools.read_psm3`.
 * Change `pvlib/test` folder to `pvlib/tests` and reorganize tests into
-  subfolders, _eg_ created `pvlib/tests/iotools` (:pull:`859`)
+  subfolders, *e.g.*: created `pvlib/tests/iotools` (:pull:`859`)
+* replace `os.path` with `pathlib` and stringify path objects for Python<=3.5
 
 Documentation
 ~~~~~~~~~~~~~
