--- a/docs/sphinx/source/whatsnew/v0.7.1.rst
+++ b/docs/sphinx/source/whatsnew/v0.7.1.rst
@@ -1,11 +1,7 @@
 .. _whatsnew_0710:
 
-v0.7.1 (MONTH DAY, YEAR)
-------------------------
-
-
-API Changes
-~~~~~~~~~~~
+v0.7.1 (January 17, 2020)
+-------------------------
 
 Enhancements
 ~~~~~~~~~~~~
@@ -15,6 +11,7 @@ Enhancements
 * Added `leap_day` parameter to `iotools.get_psm3` instead of hardcoding it as
   False.
 * Added :py:func:`~pvlib.iotools.get_pvgis_tmy` to get PVGIS TMY datasets.
+  (:pull:`845`)
 * Added :py:func:`~pvlib.iotools.parse_epw` to parse a file-like buffer
   containing weather data in the EPW format.
 * Added a new module `pvlib.losses` for various loss models.
@@ -23,6 +20,8 @@ Enhancements
 
 Bug fixes
 ~~~~~~~~~
+* Fix error in logic for emitting deprecation warning in
+  :py:func:`~pvlib.pvsystem.sapm` (:pull:`844`)
 * Changed the PSM3 API endpoint for TMY requests in `iotools.get_psm3`.
 
 Testing
@@ -42,4 +41,8 @@ Contributors
 ~~~~~~~~~~~~
 * Kevin Anderson (:ghuser:`kanderso-nrel`)
 * Mark Mikofski (:ghuser:`mikofski`)
+* :ghuser:`dzimmanck`
+* Will Holmgren (:ghuser:`wholmgren`)
+* Cliff Hansen (:ghuser:`cwhanse`)
 * Valliappan CA (:ghuser:`nappaillav`)
+* Anton Driesse (:ghuser:`adriesse`)
