--- a/docs/sphinx/source/whatsnew/v0.7.2.rst
+++ b/docs/sphinx/source/whatsnew/v0.7.2.rst
@@ -1,7 +1,12 @@
+.. _whatsnew_0720:
+
+v0.7.2 (Month day, year)
+-------------------------
+
 Documentation
-=============
+~~~~~~~~~~~~~
 * Add NumFOCUS affiliation to Sphinx documentation :pull:`862`
 
 Contributors
-============
-* mikofski (ghuser:`mikofski`)
+~~~~~~~~~~~~
+* mikofski (:ghuser:`mikofski`)
