--- a/docs/sphinx/source/whatsnew/v0.7.2.rst
+++ b/docs/sphinx/source/whatsnew/v0.7.2.rst
@@ -3,6 +3,12 @@
 v0.7.2 (Month day, year)
 -------------------------
 
+Enhancements
+~~~~~~~~~~~~
+* TMY3 dataframe returned by :py:func:`~pvlib.iotools.read_tmy3` now contains
+  the original ``Date (MM/DD/YYYY)`` and ``Time (HH:MM)`` columns that the
+  indices were parsed from (:pull:`866`)
+
 Bug fixes
 ~~~~~~~~~
 * Fix :py:func:`~pvlib.iotools.read_tmy3` parsing when February contains
