--- a/docs/sphinx/source/whatsnew/v0.7.2.rst
+++ b/docs/sphinx/source/whatsnew/v0.7.2.rst
@@ -17,6 +17,7 @@ Bug fixes
 Documentation
 ~~~~~~~~~~~~~
 * Add NumFOCUS affiliation to Sphinx documentation :pull:`862`
+* Add example of IV curve generation :pull:`872` 
 
 Contributors
 ~~~~~~~~~~~~
