--- a/docs/sphinx/source/whatsnew/v0.7.2.rst
+++ b/docs/sphinx/source/whatsnew/v0.7.2.rst
@@ -6,7 +6,7 @@ v0.7.2 (Month day, year)
 API Changes
 ~~~~~~~~~~~
 * :py:class:`pvlib.forecast.Forecast` now requires ``start`` and ``end``
-  arguments to be tz-localized. (:pull:`879`)
+  arguments to be tz-localized. (:issue:`877`, :pull:`879`)
 
 Enhancements
 ~~~~~~~~~~~~
