Add calcparams_desoto+singlediode example to gallery (#872)
* Create plot_singlediode.py

* Apply suggestions from code review

Co-Authored-By: Cliff Hansen <cwhanse@sandia.gov>

* RST cleanup, reorder legend entries

* Formatting fixes

* whatsnew

* whatsnewer

* sorry, one formatting fix

* stickler

Co-authored-by: Cliff Hansen <cwhanse@sandia.gov>

--- a/docs/sphinx/source/whatsnew/v0.7.2.rst
+++ b/docs/sphinx/source/whatsnew/v0.7.2.rst
@@ -26,6 +26,7 @@ Bug fixes
 Documentation
 ~~~~~~~~~~~~~
 * Add NumFOCUS affiliation to Sphinx documentation :pull:`862`
+* Add example of IV curve generation :pull:`872` 
 
 Requirements
 ~~~~~~~~~~~~
