add Kimber soiling model (#860)
* add Kimber soiling model

* remove spaces, thx stickler

* typos: aa = a, rest = reset

* move soiling to losses

* add test for kimber soiling model

* also add a gallery example draft

* add kimber to api.rst

* use pd.to_datetime for plt
* start to add manwash test using datetime

* add test for manual wash

* add test data for manual wash
* try to fix example plot using to_pydatetime

* please fix kimber gallery example

* Fix indent on references

* add test for no rain, max soil

* reuse rainfall events
* combine zero soil assignments

* fix typos in Kimber soiling model

* correct Adrianne spelling
* add table of soiling rates from figure 3 from Kimber paper
* fix reference indents in docstring

* update what's new w/ kimber model

* fix table malformed table in losses
* fix long line in docstring

* Apply suggestions from code review

* change `rainfall_timeseries` input arg to just `rainfall`
* clarification of rainfall input, put units in brackets at end of definition
* change `threshold` input arg to `cleaning_threashold`
* change `soiling_rate` input arg to `soiling_loss_rate` and clarify definition as energy loss putting units [unitless] in brackets at the end of the definition
* remove suggestion regarding grace period to the Notes section
* fix formatting of return, there is no name, only return type
* improve notes section to add that grace period may also vary by region and to use energy loss rate instead of soiling since it's not a mass rate

Co-Authored-By: Cliff Hansen <cwhanse@sandia.gov>

* update rainfall and threshold args in kimber

* to match docstring improvement suggested in code review
* wrap long lines
* be more consistent with HSU docstring

* change soiling_rate to soiling_loss_rate

* combine panels cleaned today with grace-period,
 since it includes today

* add a 1-liner for `soiling_kimber` in the sphinx docs

* also fix missing "f

--- a/docs/sphinx/source/whatsnew/v0.7.2.rst
+++ b/docs/sphinx/source/whatsnew/v0.7.2.rst
@@ -13,6 +13,7 @@ Enhancements
 * TMY3 dataframe returned by :py:func:`~pvlib.iotools.read_tmy3` now contains
   the original ``Date (MM/DD/YYYY)`` and ``Time (HH:MM)`` columns that the
   indices were parsed from (:pull:`866`)
+* Add Kimber soiling model :py:func:`pvlib.losses.soiling_kimber` (:pull:`860`)
 
 Bug fixes
 ~~~~~~~~~
