--- a/docs/sphinx/source/whatsnew/v0.7.2.rst
+++ b/docs/sphinx/source/whatsnew/v0.7.2.rst
@@ -25,11 +25,13 @@ Bug fixes
   passing ``tz=datetime.timezone.utc`` (:pull:`879`)
 * Fix documentation homepage title to "pvlib python" based on first heading on
   the page. (:pull:`890`) (:issue:`888`)
+* Implement pytest-remotedata to increase test suite speed. Requires
+  ``--remote-data`` pytest flag to execute data retreival tests over a network.
 
 Documentation
 ~~~~~~~~~~~~~
 * Add NumFOCUS affiliation to Sphinx documentation :pull:`862`
-* Add example of IV curve generation :pull:`872` 
+* Add example of IV curve generation :pull:`872`
 
 Requirements
 ~~~~~~~~~~~~
