--- a/docs/sphinx/source/whatsnew/v0.7.2.rst
+++ b/docs/sphinx/source/whatsnew/v0.7.2.rst
@@ -8,6 +8,8 @@ Enhancements
 * TMY3 dataframe returned by :py:func:`~pvlib.iotools.read_tmy3` now contains
   the original ``Date (MM/DD/YYYY)`` and ``Time (HH:MM)`` columns that the
   indices were parsed from (:pull:`866`)
+* Add :py:func:`~pvlib.pvsystem.PVSystem.faiman` and added 
+  ``temperature_model='faiman'`` option to :py:class:`pvlib.modelchain.ModelChain`.
 
 Bug fixes
 ~~~~~~~~~
@@ -21,3 +23,4 @@ Documentation
 Contributors
 ~~~~~~~~~~~~
 * Mark Mikofski (:ghuser:`mikofski`)
+* Kevin Anderson (:ghuser:`kanderso-nrel`)
