--- a/docs/sphinx/source/whatsnew/v0.7.2.rst
+++ b/docs/sphinx/source/whatsnew/v0.7.2.rst
@@ -33,6 +33,7 @@ Bug fixes
   entries about changes to ``PVSystem.pvwatts_ac``. Delete unreleased
   0.6.4 what's new file. (:issue:`898`)
 * Compatibility with cftime 1.1. (:issue:`895`)
+* Add Python3.8 to Azure Pipelines CI (:issue:`903`)(:pull:`904`)
 
 
 Documentation
