--- a/docs/sphinx/source/whatsnew/v0.7.2.rst
+++ b/docs/sphinx/source/whatsnew/v0.7.2.rst
@@ -14,6 +14,8 @@ Enhancements
   the original ``Date (MM/DD/YYYY)`` and ``Time (HH:MM)`` columns that the
   indices were parsed from (:pull:`866`)
 * Add Kimber soiling model :py:func:`pvlib.losses.soiling_kimber` (:pull:`860`)
+* Add :func:`~pvlib.iotools.read_pvgis_tmy` for files downloaded using the
+  PVGIS tool (:issue:`880`)
 
 Bug fixes
 ~~~~~~~~~
