--- a/docs/sphinx/source/whatsnew/v0.7.2.rst
+++ b/docs/sphinx/source/whatsnew/v0.7.2.rst
@@ -34,7 +34,11 @@ Bug fixes
   0.6.4 what's new file. (:issue:`898`)
 * Compatibility with cftime 1.1. (:issue:`895`)
 * Add Python3.8 to Azure Pipelines CI (:issue:`903`)(:pull:`904`)
-
+* Minor implemention changes to avoid runtime and deprecation warnings in
+  :py:func:`~pvlib.clearsky.detect_clearsky`,
+  :py:func:`~pvlib.iam.martin_ruiz_diffuse`,
+  :py:func:`~pvlib.losses.soiling_hsu`,
+  and various test functions.
 
 Documentation
 ~~~~~~~~~~~~~
