update what's new with fix for TMY3 in soiling_hsu
* also change 1st line of kimber soiling docstring, to say calculates
 energy loss, not soiling ratio, since kimber is 1-hsu,
  they're opposite!

--- a/docs/sphinx/source/whatsnew/v0.7.2.rst
+++ b/docs/sphinx/source/whatsnew/v0.7.2.rst
@@ -39,6 +39,8 @@ Bug fixes
   :py:func:`~pvlib.iam.martin_ruiz_diffuse`,
   :py:func:`~pvlib.losses.soiling_hsu`,
   and various test functions.
+* Fix :py:func:`~pvlib.losses.soiling_hsu` TMY3 data not monotonic exception
+  (:pull:`910`)
 
 Documentation
 ~~~~~~~~~~~~~
