Add Contributing section about gallery examples (#905)
* add section about gallery examples to contributing guide

* whatsnew

* whatsnew cleanup

* add review suggestion

--- a/docs/sphinx/source/whatsnew/v0.7.2.rst
+++ b/docs/sphinx/source/whatsnew/v0.7.2.rst
@@ -42,8 +42,9 @@ Bug fixes
 
 Documentation
 ~~~~~~~~~~~~~
-* Add NumFOCUS affiliation to Sphinx documentation :pull:`862`
-* Add example of IV curve generation :pull:`872`
+* Add NumFOCUS affiliation to Sphinx documentation (:pull:`862`)
+* Add example of IV curve generation (:pull:`872`)
+* Add section about gallery examples to Contributing guide (:pull:`905`)
 
 Requirements
 ~~~~~~~~~~~~
