add to what's new

--- a/docs/sphinx/source/whatsnew/v0.7.2.rst
+++ b/docs/sphinx/source/whatsnew/v0.7.2.rst
@@ -34,6 +34,7 @@ Bug fixes
   0.6.4 what's new file. (:issue:`898`)
 * Compatibility with cftime 1.1. (:issue:`895`)
 * Add Python3.8 to Azure Pipelines CI (:issue:`903`)(:pull:`904`)
+* Add documentation build test to Azure Pipelines CI (:pull:`909`)
 
 
 Documentation
