BLD: build docs on Azure Pipelines (#909)
* try building docs on Azure Pipelines

* add doc.yml conda env file

* specify conda env name

* fix doc -> docs

* include sphinx-gallery

* add pytest to env

* install library to run sphinx-gallery

* install full suite of pvlib dependencies

* remove 'warnings as errors' flag

* return standard tests to azure-pipelines.yml

* fix job spacing

* add to what's new

* remove unused doc.yml config

* use requirements-py38.yml for docbuilding

* remove conda environment

* more conda removal

* specify python 3.8

* additional cleanup

* test docs before publish, rename env build

--- a/docs/sphinx/source/whatsnew/v0.7.2.rst
+++ b/docs/sphinx/source/whatsnew/v0.7.2.rst
@@ -37,6 +37,7 @@ Bug fixes
   0.6.4 what's new file. (:issue:`898`)
 * Compatibility with cftime 1.1. (:issue:`895`)
 * Add Python3.8 to Azure Pipelines CI (:issue:`903`)(:pull:`904`)
+* Add documentation build test to Azure Pipelines CI (:pull:`909`)
 * Minor implemention changes to avoid runtime and deprecation warnings in
   :py:func:`~pvlib.clearsky.detect_clearsky`,
   :py:func:`~pvlib.iam.martin_ruiz_diffuse`,
