fix bug in read_tmy3 when year coerced
- so the indices are monotonically increasing
- add note to API changes and update bug fix in what's new
- update docstring in read_tmy3
  * explain in coerce_year parmaeter that all of the indices except the
  last one will have this, value, but the last index will be the value+1
- update the warnings to explain that if the year is coerced that the last index
 will be the next year
- do coerce year on date_ymd which is a Series of Timestamps, not an
 index so mutable (can assign by integer index) which makes it trivial
 to change the last index to be the next year
- revert most of the changes from the previous commits in this PR
  * remove `tmy3_monotonic_index` from `api.rst`, `iotools/__init__.py`, and from `tmy.py`
  * remove `monotonic_index` kwarg from read_tmy3
  * remove use of `tmy3_monotonic_index` from sphinx gallery example,
   test_losses, and test_tmy
  * remove test for tmy3_monotonic_index and the monotonic_index kwarg
  * fix test_tmy test to treat last index differently, except for the
  leap year test which now has a constant diff, yay!

--- a/docs/sphinx/source/whatsnew/v0.7.2.rst
+++ b/docs/sphinx/source/whatsnew/v0.7.2.rst
@@ -7,6 +7,9 @@ API Changes
 ~~~~~~~~~~~
 * :py:class:`pvlib.forecast.ForecastModel` now requires ``start`` and ``end``
   arguments to be tz-localized. (:issue:`877`, :pull:`879`)
+* :py:func:`pvlib.iotools.read_tmy3` when coerced to a single year now returns
+  indices that are monotonically increasing, for example the last index will be
+  midnight of the *next* year. (:pull:`910`)
 
 Enhancements
 ~~~~~~~~~~~~
@@ -14,11 +17,6 @@ Enhancements
   the original ``Date (MM/DD/YYYY)`` and ``Time (HH:MM)`` columns that the
   indices were parsed from (:pull:`866`)
 * Add Kimber soiling model :py:func:`pvlib.losses.soiling_kimber` (:pull:`860`)
-* Add :py:func:`~pvlib.iotools.tmy3_monotonic_index` to fix TMY3
-  data coerced to a single year to be monotonically increasing (:pull:`910`)
-* Add ``monotonic_index`` kwarg to :py:func:`~pvlib.iotools.read_tmy3` to fix
-  TMY3 data coerced to a single year to be monotonically increasing, default is
-  ``False`` and warns that it will be changed to ``True`` in v0.8 (:pull:`910`)
 
 Bug fixes
 ~~~~~~~~~
@@ -44,8 +42,8 @@ Bug fixes
   :py:func:`~pvlib.iam.martin_ruiz_diffuse`,
   :py:func:`~pvlib.losses.soiling_hsu`,
   and various test functions.
-* Fix :py:func:`~pvlib.losses.soiling_hsu` TMY3 data not monotonic exception
-  (:pull:`910`)
+* Fix :py:func:`~pvlib.iotools.read_tmy3` so that when coerced to a single year
+  the TMY3 data will be monotonically increasing (:pull:`910`)
 
 Documentation
 ~~~~~~~~~~~~~
