--- a/docs/sphinx/source/whatsnew/v0.7.2.rst
+++ b/docs/sphinx/source/whatsnew/v0.7.2.rst
@@ -7,42 +7,47 @@ API Changes
 ~~~~~~~~~~~
 * :py:class:`pvlib.forecast.ForecastModel` now requires ``start`` and ``end``
   arguments to be tz-localized. (:issue:`877`, :pull:`879`)
+* :py:func:`pvlib.iotools.read_tmy3` when coerced to a single year now returns
+  indices that are monotonically increasing. Therefore, the last index will be
+  January 1, 00:00 of the *next* year. (:pull:`910`)
 
 Enhancements
 ~~~~~~~~~~~~
 * TMY3 dataframe returned by :py:func:`~pvlib.iotools.read_tmy3` now contains
   the original ``Date (MM/DD/YYYY)`` and ``Time (HH:MM)`` columns that the
-  indices were parsed from (:pull:`866`)
+  indices were parsed from. (:pull:`866`)
 * Add :py:func:`~pvlib.pvsystem.PVSystem.faiman` and added 
   ``temperature_model='faiman'`` option to :py:class:`~pvlib.modelchain.ModelChain`
   (:pull:`897`) (:issue:`836`).
-* Add Kimber soiling model :py:func:`pvlib.losses.soiling_kimber` (:pull:`860`)
+* Add Kimber soiling model :py:func:`pvlib.losses.soiling_kimber`. (:pull:`860`)
 
 Bug fixes
 ~~~~~~~~~
 * Fix :py:func:`~pvlib.iotools.read_tmy3` parsing when February contains
-  a leap year (:pull:`866`)
+  a leap year. (:pull:`866`)
 * Implement NREL Developer Network API key for consistent success with API
-  calls in :py:mod:`pvlib.tests.iotools.test_psm3` (:pull:`873`)
+  calls in :py:mod:`pvlib.tests.iotools.test_psm3`. (:pull:`873`)
 * Fix issue with :py:class:`pvlib.location.Location` creation when
-  passing ``tz=datetime.timezone.utc`` (:pull:`879`)
+  passing ``tz=datetime.timezone.utc``. (:pull:`879`)
 * Fix documentation homepage title to "pvlib python" based on first heading on
   the page. (:pull:`890`) (:issue:`888`)
 * Implement `pytest-remotedata <https://github.com/astropy/pytest-remotedata>`_
   to increase test suite speed. Requires ``--remote-data`` pytest flag to
-  execute data retrieval tests over a network.(:issue:`882`)(:pull:`896`)
+  execute data retrieval tests over a network. (:issue:`882`)(:pull:`896`)
 * Fix missing
   `0.7.0 what's new <https://pvlib-python.readthedocs.io/en/stable/whatsnew.html#v0-7-0-december-18-2019>`_
   entries about changes to ``PVSystem.pvwatts_ac``. Delete unreleased
   0.6.4 what's new file. (:issue:`898`)
 * Compatibility with cftime 1.1. (:issue:`895`)
-* Add Python3.8 to Azure Pipelines CI (:issue:`903`)(:pull:`904`)
-* Add documentation build test to Azure Pipelines CI (:pull:`909`)
+* Add Python3.8 to Azure Pipelines CI. (:issue:`903`)(:pull:`904`)
+* Add documentation build test to Azure Pipelines CI. (:pull:`909`)
 * Minor implemention changes to avoid runtime and deprecation warnings in
   :py:func:`~pvlib.clearsky.detect_clearsky`,
   :py:func:`~pvlib.iam.martin_ruiz_diffuse`,
   :py:func:`~pvlib.losses.soiling_hsu`,
   and various test functions.
+* Fix :py:func:`~pvlib.iotools.read_tmy3` so that when coerced to a single year
+  the TMY3 index will be monotonically increasing. (:pull:`910`)
 
 Testing
 ~~~~~~~
