--- a/docs/sphinx/source/whatsnew/v0.7.2.rst
+++ b/docs/sphinx/source/whatsnew/v0.7.2.rst
@@ -20,6 +20,8 @@ Enhancements
   ``temperature_model='faiman'`` option to :py:class:`~pvlib.modelchain.ModelChain`
   (:pull:`897`) (:issue:`836`).
 * Add Kimber soiling model :py:func:`pvlib.losses.soiling_kimber`. (:pull:`860`)
+* Add :func:`~pvlib.iotools.read_pvgis_tmy` for files downloaded using the
+  PVGIS tool. (:issue:`880`)
 
 Bug fixes
 ~~~~~~~~~
