--- a/docs/sphinx/source/whatsnew/v0.7.2.rst
+++ b/docs/sphinx/source/whatsnew/v0.7.2.rst
@@ -45,9 +45,12 @@ Testing
   tests. (:issue:`908`, :pull:`915`).
 * Implement `pytest-remotedata <https://github.com/astropy/pytest-remotedata>`_
   to increase test suite speed. Requires ``--remote-data`` pytest flag to
-  execute data retrieval tests over a network.(:issue:`882`)(:pull:`896`)
-* Add Python3.8 to Azure Pipelines CI (:issue:`903`)(:pull:`904`)
-* Add documentation build test to Azure Pipelines CI (:pull:`909`)
+  execute data retrieval tests over a network. (:issue:`882`)(:pull:`896`)
+* Add Python3.8 to Azure Pipelines CI. (:issue:`903`)(:pull:`904`)
+* Add documentation build test to Azure Pipelines CI. (:pull:`909`)
+* Implement the `pytest.mark.flaky` decorator from `pytest-rurunfailures`
+  `<https://github.com/pytest-dev/pytest-rerunfailures>`_ on all network
+  dependent iotools tests to repeat them on failure. (:pull:`919`)
 
 Documentation
 ~~~~~~~~~~~~~
