Link to code of conduct (#922)
* Link to code of contact

* Update docs/sphinx/source/contributing.rst

Co-Authored-By: Cliff Hansen <cwhanse@sandia.gov>

* remove CoC contact proj-team and shell prompts

* update what's new re: CoC link in contributing

Co-authored-by: Cliff Hansen <cwhanse@sandia.gov>

--- a/docs/sphinx/source/whatsnew/v0.7.2.rst
+++ b/docs/sphinx/source/whatsnew/v0.7.2.rst
@@ -61,9 +61,10 @@ Testing
 
 Documentation
 ~~~~~~~~~~~~~
-* Add NumFOCUS affiliation to Sphinx documentation (:pull:`862`)
-* Add example of IV curve generation (:pull:`872`)
-* Add section about gallery examples to Contributing guide (:pull:`905`)
+* Add NumFOCUS affiliation to Sphinx documentation. (:pull:`862`)
+* Add example of IV curve generation. (:pull:`872`)
+* Add section about gallery examples to Contributing guide. (:pull:`905`)
+* Add section with link to Code of Conduct in Contributing guide. (:pull:`922`)
 
 Requirements
 ~~~~~~~~~~~~
