Create plot_ghi_transposition.py example (#933)
* Create ghi_transposition.py

* Update ghi_transposition.py

* Update ghi_transposition.py

* Create plot_ghi_transposition.py

* Delete ghi_transposition.py

* Update v0.7.2.rst

* Update v0.7.2.rst

* Update docs/examples/plot_ghi_transposition.py

Co-Authored-By: Kevin Anderson <57452607+kanderso-nrel@users.noreply.github.com>

* Update docs/examples/plot_ghi_transposition.py

Co-Authored-By: Kevin Anderson <57452607+kanderso-nrel@users.noreply.github.com>

* Update docs/examples/plot_ghi_transposition.py

Co-Authored-By: Kevin Anderson <57452607+kanderso-nrel@users.noreply.github.com>

* Update plot_ghi_transposition.py

* Update docs/examples/plot_ghi_transposition.py

Co-Authored-By: Kevin Anderson <57452607+kanderso-nrel@users.noreply.github.com>

* Update docs/examples/plot_ghi_transposition.py

Co-Authored-By: Kevin Anderson <57452607+kanderso-nrel@users.noreply.github.com>

* Update plot_ghi_transposition.py

* Update plot_ghi_transposition.py

* Update plot_ghi_transposition.py

* Update plot_ghi_transposition.py

Co-authored-by: Kevin Anderson <57452607+kanderso-nrel@users.noreply.github.com>

--- a/docs/sphinx/source/whatsnew/v0.7.2.rst
+++ b/docs/sphinx/source/whatsnew/v0.7.2.rst
@@ -67,6 +67,7 @@ Documentation
 * Add example of IV curve generation. (:pull:`872`)
 * Add section about gallery examples to Contributing guide. (:pull:`905`)
 * Add section with link to Code of Conduct in Contributing guide. (:pull:`922`)
+* Add example of GHI to POA transposition (:pull:`933`)
 
 Requirements
 ~~~~~~~~~~~~
@@ -81,3 +82,4 @@ Contributors
 * Kevin Anderson (:ghuser:`kanderso-nrel`)
 * Karthikeyan Singaravelan (:ghuser:`tirkarthi`)
 * Siyan (Veronica) Guo (:ghuser:`veronicaguo`)
+* Eric Fitch (:ghuser:`ericf900`)
