--- a/docs/sphinx/source/whatsnew/v0.7.2.rst
+++ b/docs/sphinx/source/whatsnew/v0.7.2.rst
@@ -45,6 +45,8 @@ Bug fixes
   and various test functions.
 * Fix :py:func:`~pvlib.iotools.read_tmy3` so that when coerced to a single year
   the TMY3 index will be monotonically increasing. (:pull:`910`)
+* Fix :py:func:`pvlib.spa.julian_day_dt` so that microseconds are scaled
+  correctly (:issue:`940') (:pull:`939`)
 
 Testing
 ~~~~~~~
@@ -60,6 +62,8 @@ Testing
   dependent iotools tests to repeat them on failure. (:pull:`919`)
 * Separate azure-pipelines.yml platform-specific tests to their own templates
   located in ``./ci/azure/``.  (:pull:`926`)
+* Updated test_julian_day_dt to check for correct microsecond scaling 
+  (:issue:`940') (:pull:`939`)
 
 Documentation
 ~~~~~~~~~~~~~
