--- a/docs/sphinx/source/whatsnew/v0.7.2.rst
+++ b/docs/sphinx/source/whatsnew/v0.7.2.rst
@@ -62,8 +62,8 @@ Testing
   dependent iotools tests to repeat them on failure. (:pull:`919`)
 * Separate azure-pipelines.yml platform-specific tests to their own templates
   located in ``./ci/azure/``.  (:pull:`926`)
-* Updated test_julian_day_dt to check for correct microsecond scaling 
-  (:issue:`940') (:pull:`939`)
+* Updated test_julian_day_dt in spa_test to check for correct microsecond 
+  scaling (:issue:`940') (:pull:`939`)
 
 Documentation
 ~~~~~~~~~~~~~
