--- a/docs/sphinx/source/whatsnew/v0.7.2.rst
+++ b/docs/sphinx/source/whatsnew/v0.7.2.rst
@@ -46,7 +46,7 @@ Bug fixes
 * Fix :py:func:`~pvlib.iotools.read_tmy3` so that when coerced to a single year
   the TMY3 index will be monotonically increasing. (:pull:`910`)
 * Fix :py:func:`pvlib.spa.julian_day_dt` so that microseconds are scaled
-  correctly (:issue:`940') (:pull:`942`)
+  correctly (:issue:`940`) (:pull:`942`)
 
 Testing
 ~~~~~~~
@@ -62,8 +62,6 @@ Testing
   dependent iotools tests to repeat them on failure. (:pull:`919`)
 * Separate azure-pipelines.yml platform-specific tests to their own templates
   located in ``./ci/azure/``.  (:pull:`926`)
-* Updated test_julian_day_dt in spa_test to check for correct microsecond 
-  scaling (:issue:`940') (:pull:`942`)
 
 Documentation
 ~~~~~~~~~~~~~
