--- a/docs/sphinx/source/whatsnew/v0.7.2.rst
+++ b/docs/sphinx/source/whatsnew/v0.7.2.rst
@@ -14,7 +14,6 @@ API Changes
   models will go into code modules named for the loss or effect type.
   (:issue:`935`, :issue:`891`)
 * Renamed ``pvlib.losses.soiling_hsu`` to :py:func:`pvlib.soiling.hsu`
-  and ``pvlib.losses.soiling_kimber`` to :py:func:`pvlib.soiling.kimber`
   (:issue:`935`)
 
 Enhancements
@@ -25,7 +24,8 @@ Enhancements
 * Add :py:func:`~pvlib.pvsystem.PVSystem.faiman` and added
   ``temperature_model='faiman'`` option to :py:class:`~pvlib.modelchain.ModelChain`
   (:pull:`897`) (:issue:`836`).
-* Add Kimber soiling model :py:func:`pvlib.losses.soiling_kimber`. (:pull:`860`)
+* Add Kimber soiling model :py:func:`pvlib.soiling.kimber`. (:pull:`860`,
+   :issue`935`)
 * Add :func:`~pvlib.iotools.read_pvgis_tmy` for files downloaded using the
   PVGIS tool. (:issue:`880`)
 
