--- a/docs/sphinx/source/whatsnew/v0.7.2.rst
+++ b/docs/sphinx/source/whatsnew/v0.7.2.rst
@@ -48,6 +48,8 @@ Bug fixes
   and various test functions.
 * Fix :py:func:`~pvlib.iotools.read_tmy3` so that when coerced to a single year
   the TMY3 index will be monotonically increasing. (:pull:`910`)
+* Limit cftime<=1.1.0 to alleviate errors from netcdf4 time handling in
+  forecast.py (:pull:`947`)
 
 Testing
 ~~~~~~~
@@ -87,3 +89,4 @@ Contributors
 * Siyan (Veronica) Guo (:ghuser:`veronicaguo`)
 * Eric Fitch (:ghuser:`ericf900`)
 * Joseph Palakapilly (:ghuser:`JPalakapilly`)
+* Auguste Colle(:ghuser:`augustecolle`)
