--- a/docs/sphinx/source/whatsnew/v0.7.2.rst
+++ b/docs/sphinx/source/whatsnew/v0.7.2.rst
@@ -48,6 +48,8 @@ Bug fixes
   and various test functions.
 * Fix :py:func:`~pvlib.iotools.read_tmy3` so that when coerced to a single year
   the TMY3 index will be monotonically increasing. (:pull:`910`)
+* Fix :py:func:`pvlib.spa.julian_day_dt` so that microseconds are scaled
+  correctly (:issue:`940`) (:pull:`942`)
 
 Testing
 ~~~~~~~
