--- a/docs/sphinx/source/whatsnew/v0.7.2.rst
+++ b/docs/sphinx/source/whatsnew/v0.7.2.rst
@@ -77,9 +77,9 @@ Documentation
 Requirements
 ~~~~~~~~~~~~
 * nrel-pysam (optional) minimum set to v1.0.0 (:issue:`874`)
-* cftime (optional) maximum set to <=1.1.0 . Future use of
+* cftime (optional) minimum set to >=1.1.1. Use of
   `only_use_python_datetimes` kwarg in `netCDF4.num2date` in forecast.py
-  requires >=1.1.1 (:pull:`947`)
+  requires >=1.1.1 which is >=Python3.6. (:pull:`947`)
 
 Contributors
 ~~~~~~~~~~~~
