--- a/docs/sphinx/source/whatsnew/v0.7.2.rst
+++ b/docs/sphinx/source/whatsnew/v0.7.2.rst
@@ -10,6 +10,7 @@ API Changes
 * :py:func:`pvlib.iotools.read_tmy3` when coerced to a single year now returns
   indices that are monotonically increasing. Therefore, the last index will be
   January 1, 00:00 of the *next* year. (:pull:`910`)
+* Add deprecation warnings in :func:`~pvlib.bifacial.pvfactors_timeseries` for kwargs inputs related to parallel mode (:issue:`902`)(:pull:`934`)
 
 Enhancements
 ~~~~~~~~~~~~
@@ -22,6 +23,7 @@ Enhancements
 * Add Kimber soiling model :py:func:`pvlib.losses.soiling_kimber`. (:pull:`860`)
 * Add :func:`~pvlib.iotools.read_pvgis_tmy` for files downloaded using the
   PVGIS tool. (:issue:`880`)
+* Update :func:`~pvlib.bifacial.pvfactors_timeseries` to run with ``pvfactors`` v1.4.1 (:issue:`902`)(:pull:`934`)
 
 Bug fixes
 ~~~~~~~~~
@@ -81,3 +83,4 @@ Contributors
 * Kevin Anderson (:ghuser:`kanderso-nrel`)
 * Karthikeyan Singaravelan (:ghuser:`tirkarthi`)
 * Siyan (Veronica) Guo (:ghuser:`veronicaguo`)
+* Marc A. Anoma (:ghuser:`anomam`)
